--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>MSDS 432: Module 2</h1>
     <h2>Cloud Platform</h2>
-    <h3>[INSERT Platform Name]></h3>
+    <h3>[Insert Platform Name]></h3>
 
 </body>
 
